--- a/kththesis/references.bib
+++ b/kththesis/references.bib
@@ -13,6 +13,45 @@
     url = {http://speed.cis.nctu.edu.tw/~ydlin/QoE.pdf}
 }
 
+@article{Biørn-HansenAndreas2019AiCM,
+    year = {2019},
+    title = {Animations in Cross-Platform Mobile Applications: An Evaluation of Tools, Metrics and Performance},
+    language = {eng},
+    author[1] = {Biørn-Hansen, Andreas},
+    author[2] = {Grønli, Tor-Morten},
+    author[3] = {Ghinea, Gheorghita},
+    url = {http://hdl.handle.net/11250/2597987},
+}
+
+@inproceedings{launch_time,
+  author[1]={Zhang, W.},
+  author[2]={Wu, D.},
+  author[3]={Guo, G},
+  author[4]={Jiang, A.},
+  autor[5]={Guo, J.},
+  booktitle={2018 International Conference on Computer, Information and Telecommunication Systems (CITS)}, 
+  title={Research on the user time difference threshold during the mobile terminal app launch process}, 
+  year={2018},
+  pages={1-5},
+}
+
+@article{pwa_ahp,
+  title={Progressive Web Application Assessment Using AHP},
+  author[1]={Khan, Asharul Islam},
+  author[2]={Al-Badi, Ali},
+  author[3]={Al-Kindi, Mahmood},
+  journal={Procedia Computer Science},
+  volume={155},
+  pages={289--294},
+  year={2019},
+  publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S187705091930955X/pdf?md5=d0b80a86ff24451802edb3535e1638c4&pid=1-s2.0-S187705091930955X-main.pdf}
+}
+
+
+
+
+
 @misc{YbergViktor2018NPaU,
     series = {TRITA-EECS-EX},
     year = {2018},
@@ -87,7 +126,6 @@
     author[1] = {Biørn-Hansen, A.},
     author[2] = {Majchrzak, T.A.},
     author[3] = {Grønli, T.-M.},
-    keywords = {Cross-Platform ; Cross-Platform Development ; Mobile Web ; Progressive Web Apps ; Service Workers},
 }
 %TODO: do I cite it?
 @inproceedings{Biorn-Hansen3,
