Updates from Overleaf

--- a/kththesis/examplethesis.tex
+++ b/kththesis/examplethesis.tex
@@ -346,7 +346,13 @@ Lastly, only two research papers examined the user experience offered by Progres
 
 Though some security issues needs to be resolved \cite{Pride_Prejudice}, Progressive Web Apps have the potential to become a popular cross-platform solution for developing mobile applications. They don't add much complexity to a regular web app \cite{JohannsenFabian2018PWAa}, greatly reducing the cost of developing a mobile application for every platform, and have similar performance than mobile applications regarding launch time \cite{PWApossibleUnifer}\cite{Biorn-Hansen2} \cite{PWAapplicability}, energy consumption \cite{PWAapplicability}, user experience \cite{emulating_native_w_crossplatform}\cite{PWA_UX_comparison_study}, or even hardware access in some cases \cite{PWAbc_responsetime}. 
 \paragraph{}
-However, no study was found that examined the rendering performance of Progressive Web Apps. While it is important for the user that the app launches quickly \cite{launch_time}, it is also important that the app remains smooth during the time of use. \newline
+
+However, at the time of writing no study was found that examined the User Interface performance at runtime. The User Interface performance can be divided into 2 main factors : the responsiveness i.e. how fast the app can respond to user input, and the animation performance i.e. how well the transitions between 2 states are made (for example the animations when navigating, clicking a button, scrolling, changing content).
+
+
+
+
+However, at the time of writing no study was found that examined the rendering performance of Progressive Web Apps. While it is important for the user that the app launches quickly \cite{launch_time}, it is also important that the app remains smooth during the time of use. \newline
 Thus, this paper will try to address this issue and study the smoothness of mobile applications and progressive web apps.
 
 Most of the time, the smoothness of an application is associated with its responsiveness i.e. how quickly it can respond to user input.
